// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SlidingColumns > should navigate to the next column 1`] = `
<div>
  <div
    aria-disabled="false"
    class="svelte-18cvrgz"
    data-disabled="false"
    data-sliding-columns-root=""
    tabindex="0"
  >
    <div
      class="svelte-18cvrgz"
      data-sliding-segment=""
    >
      Column 2
    </div>
  </div>
  
</div>
`;

exports[`SlidingColumns > should navigate to the next column 2`] = `
<div>
  <div
    aria-disabled="false"
    class="svelte-18cvrgz"
    data-disabled="false"
    data-sliding-columns-root=""
    tabindex="0"
  >
    <div
      class="svelte-18cvrgz"
      data-sliding-segment=""
    >
      Column 3
    </div>
  </div>
  
</div>
`;

exports[`SlidingColumns > should navigate to the previous column 1`] = `
<div>
  <div
    aria-disabled="false"
    class="svelte-18cvrgz"
    data-disabled="false"
    data-sliding-columns-root=""
    tabindex="0"
  >
    <div
      class="svelte-18cvrgz"
      data-sliding-segment=""
    >
      Column 2
    </div>
  </div>
  
</div>
`;

exports[`SlidingColumns > should navigate to the previous column 2`] = `
<div>
  <div
    aria-disabled="false"
    class="svelte-18cvrgz"
    data-disabled="false"
    data-sliding-columns-root=""
    tabindex="0"
  >
    <div
      class="svelte-18cvrgz"
      data-sliding-segment=""
    >
      Column 1
    </div>
  </div>
  
</div>
`;

exports[`SlidingColumns > should render correctly 1`] = `
<div>
  <div
    aria-disabled="false"
    class="svelte-18cvrgz"
    data-disabled="false"
    data-sliding-columns-root=""
    tabindex="0"
  >
    <div
      class="svelte-18cvrgz"
      data-sliding-segment=""
    >
      Column 1
    </div>
  </div>
  
</div>
`;

exports[`SlidingColumns > should render correctly 2`] = `
<div>
  <div
    aria-disabled="false"
    class="svelte-18cvrgz"
    data-disabled="false"
    data-sliding-columns-root=""
    tabindex="0"
  >
    <div
      class="svelte-18cvrgz"
      data-sliding-segment=""
    >
      Column 2
    </div>
  </div>
  
</div>
`;
